package srcEjercicio2;
public class Main{
    public static void main(String[] args) {

        Pantalla pantalla = new Pantalla();
        pantalla.mostrar();
        
    }
}